--- a/Xcelerate/wwwroot/css/Ad/Information.css
+++ b/Xcelerate/wwwroot/css/Ad/Information.css
@@ -107,7 +107,7 @@ body {
 .car-description {
     margin: 0px auto 190px auto;
     padding: 25px;
-    width: 440px;
+    width: 600px;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -183,10 +183,17 @@ body {
 
 .edit-icon-link {
     text-decoration: none;
+    background: none;
+    border: none;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
 }
 
 .edit-and-delete-container {
     margin-right: 10px;
+    display: flex;
 }
 
 .post-review-button {
