--- a/Xcelerate/Views/Account/Login.cshtml
+++ b/Xcelerate/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
 
 <span class="website-name" filter-content="X">Xcelerate</span>
 <article class="card-login">
-	<form method="post" action="/Account/Login" class="card-content">
+	<form method="post" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl" class="card-content">
 		<h1 class="title-text">LOGIN FORM</h1>
 		<section class="other-forms">
 			<label asp-for="@Model.Email">Email</label>
