--- a/Xcelerate/wwwroot/css/Ad/Information.css
+++ b/Xcelerate/wwwroot/css/Ad/Information.css
@@ -206,6 +206,12 @@ body {
 }
 
 .price-and-buy-cancel-button {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin-right: 30px;
 }
 
 .review-comment {
@@ -278,18 +284,13 @@ body {
 
 .price-information {
     font-size: 50px;
-    position: absolute;
     margin-top: 15px;
-    left: 1040px;
 }
 
 
 .buy-button, .cancel-button, .compare-button {
     font-size: 35px;
-    position: absolute;
     margin-top: 10px;
-    bottom: 25px;
-    left: 1150px;
     padding: 0px 25px;
     border-radius: 25px;
 }
@@ -314,8 +315,14 @@ body {
 }
 
 .car-information {
+    width: 550px;
     margin-top: 10px;
     font-size: 25px;
+}
+
+.list-information-car {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .list-information-car-accessories {
