Fixed logic for getting accessories for user ads and owned cars.

--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -25,7 +25,7 @@
 					{
 						<!-- Display content for the owner -->
 						<form asp-area="" asp-controller="UserCars" asp-action="Cancel" asp-route-carId="@Model.CarId" asp-route-adId="@Model.AdId" method="post">
-							<button type="submit" class="cancel-button">Cancel Ad</button>
+							<button type="submit" class="cancel-button">Cancel</button>
 						</form>
 					}
 					else
