--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -33,7 +33,7 @@
 					</ul>
 					<footer class="bottom-text">
 						<i>
-							<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-carId="@ad.CarId" asp-route-adId="@ad.AdId">View</a>
+							<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-adId="@ad.AdId">View</a>
 						</i>
 					</footer>
 				</div>
@@ -101,7 +101,7 @@ else
 							}
 							else
 							{
-								<a asp-area="" asp-controller="Ad" asp-action="Information" asp-route-carId="@ad.CarId" asp-route-adId="@ad.AdId">View</a>
+								<a asp-area="" asp-controller="Ad" asp-action="Information"  asp-route-adId="@ad.AdId">View</a>
 							}
 						</i>
 					</footer>
