--- a/Xcelerate/wwwroot/css/Ad/Index.css
+++ b/Xcelerate/wwwroot/css/Ad/Index.css
@@ -232,3 +232,29 @@ body {
     align-items: center; /* Center the cards horizontally */
     margin-bottom: 460px;
 }
+
+.pagination-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.page-list {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+}
+
+.page-item a {
+    color: white;
+}
+
+.page-link {
+    border-radius: 12px;
+    padding: 20px;
+    background: black;
+    font-size:18px;
+    text-decoration: none;
+}
